prometheus/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      serviceAccountName: prometheus
      volumes:
        - name: prometheus-volume
          configMap:
            name: prometheus
      containers:
        - name: prometheus
          image: index.docker.io/prom/prometheus:v2.24.1
          command: ['prometheus']
          args: ["--config.file", "/tmp/prometheus.yml"]
          volumeMounts:
            - name: prometheus-volume
              mountPath: /tmp/prometheus.yml
              subPath: prometheus.yml
          ports:
            - containerPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: prometheus
spec:
  type: ClusterIP
  selector:
    app: prometheus
  ports:
    - protocol: TCP
      port: 9090
