prometheus/ingress.yml
#@ load("@ytt:data", "data")
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus
  namespace: prometheus
spec:
  rules:
  - host: #@ data.values.ingress_hostname
    http:
      paths:
      - backend:
          serviceName: prometheus
          servicePort: 9090
        path: /
  tls:
  - hosts:
    - #@ data.values.ingress_hostname
    secretName: prometheus-tls
