prometheus/virtualservice.yml
#@ load("@ytt:data", "data")

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-virtual-service
  namespace: prometheus
spec:
  hosts:
    - prometheus.apps.lab.home
    - prometheus.databases.lab.home
  gateways:
    - app-gateway.istio-system.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: prometheus
        port:
          number: 9090
